--- a/learning_log/learning_logs/templates/learning_logs/base.html
+++ b/learning_log/learning_logs/templates/learning_logs/base.html
@@ -1,1 +1,5 @@
-<>
+<p>
+    <a href="{%url 'learning_logs:index' %}">Learning Log</a>
+    <a href={%url 'learning_logs:topics'%}>topics</a>
+</p>
+{%block content %}{%endblock content%}
