--- a/learning_log/learning_logs/templates/learning_logs/index.html
+++ b/learning_log/learning_logs/templates/learning_logs/index.html
@@ -1,6 +1,5 @@
-{% comment %} <p>Learning Log</p> {% endcomment %}
-{%extends"learning_logs/base.html"%} 
-{%block content%}
-<p>Learning Log helps you keep track of your learning, for any topic you're
-learning about.</p>
-{%endblock content%}
+{% extends "learning_logs/base.html" %}
+
+{% block content %}
+  <p>Learning Log helps you keep track of your learning, for any topic you're learning about.</p>
+{% endblock content %}
