--- a/learning_log/learning_logs/templates/learning_logs/base.html
+++ b/learning_log/learning_logs/templates/learning_logs/base.html
@@ -9,7 +9,7 @@
   <title>Learning Log</title>
 
   {% bootstrap_css %}
-  {% bootstrap_javascript jquery='full' %}
+  {% comment %} {% bootstrap_javascript jquery='full' %} {% endcomment %}
 
 </head>
 <body>
