--- a/learning_log/learning_logs/templates/learning_logs/index.html
+++ b/learning_log/learning_logs/templates/learning_logs/index.html
@@ -1,5 +1,14 @@
 {% extends "learning_logs/base.html" %}
 
-{% block content %}
-  <p>Learning Log helps you keep track of your learning, for any topic you're learning about.</p>
-{% endblock content %}
+{% block page_header %}
+  <div class="jumbotron">
+    <h1 class="display-3">Track your learning.</h1>
+
+    <p class="lead">Make your own Learning Log, and keep a list of the
+        topics you're learning about. Whenever you learn something new
+        about a topic, make an entry summarizing what you've learned.</p>
+
+    <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}"
+        role="button">Register &raquo;</a>
+  </div>
+{% endblock page_header %}
