--- a/mysite/mysite/polls/static/polls/style.css
+++ b/mysite/mysite/polls/static/polls/style.css
@@ -1,6 +1,8 @@
 li a {
     color: green;
 }
+
 body {
-    background: white url("images/background.gif") no-repeat;
+    /* background: rgb(233, 219, 219) url("images/background.gif") no-repeat; */
+    background: url('images/1.gif') no-repeat;
 }
